--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,7 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.0",
-    "fluent-ffmpeg": "^2.1.3",
+    "get-video-duration": "^4.1.0",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
