--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,8 +1,8 @@
-node_modules
+node_modules/
 # Keep environment variables out of version control
 .env
 
-/generated/prisma
+/generated/prisma/
 
 # User uploaded files
 uploads/
